--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Fitness Oefeningen</title>
-        <link rel="stylesheet" href="style1.css" />
+        <link rel="stylesheet" href="{{ url_for('static', filename='style1.css') }}" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body>
@@ -31,8 +31,8 @@
         </div>
         <div class="container" id="kaart-wrapper">
     </div>
-    <script src="script.js"></script>
-    <script src="drag.js"></script>
+    <script src="{{ url_for('static', filename='script.js') }}"></script>
+    <script src="{{ url_for('static', filename='drag.js') }}"></script>
     </body>
 </html>
 
@@ -62,7 +62,7 @@
         }
 
 
-        drag()
+drag()
     function toonOefeningen(bench_oefeningen) {
         for(i = 0; i < bench_oefeningen.length; i++) {
             document.getElementById("kaart-wrapper"). innerHTML += 
